# ttr-goal-generator

./: LICENSE  README.md  app.py  europe.py  generator.py  pyproject.toml  routes.xlsx  start.fish  typedefs.py
backend/: app.py  dijkstra.py  generator.py  typedefs.py  utils.py
frontend/ttr-dashboard/: app.json  bun.lockb  package.json
frontend/ttr-dashboard/app/: _layout.tsx
frontend/ttr-dashboard/app/(tabs)/: _layout.tsx  index.tsx
